# universal-portfolios

./: pyproject.toml  requirements.txt
universal/algos/: bcrp.py  tco.py  wmamr.py
