[tool.poetry]
name = "universal-portfolios"
version = "0.4.7"
description = "Collection of algorithms for online portfolio selection"
readme = "README.md"
repository = "https://github.com/Marigold/universal-portfolios"
authors = ["Marigold <mojmir.vinkler@gmail.com>"]
packages = [
    { include = "universal" },
]

[tool.poetry.dependencies]
python = "^3.6"
scipy = "*"
matplotlib = "*"
pandas-datareader = "*"
statsmodels = "*"
scikit-learn = "*"
seaborn = "*"
requests = "*"
plotly = "*"
pandas = "*"
cvxopt = "*"
tqdm = "*"
typing-extensions = "*"
urllib3 = "*"
Pillow = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipdb = "^0.13.3"
line-profiler = "^3.0.2"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"
nbdime = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
